syntax = "proto3";

package org.opensanctions.zahir.server.proto.v1;

option java_package = "org.opensanctions.zahir.server.proto.v1";
// option java_outer_classname = "SessionProto";
option java_multiple_files = true;

service SessionService {
  // Creates a new session
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse) {}
  
  // Closes an existing session
  rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse) {}
}

message CreateSessionRequest {
}

message CreateSessionResponse {
  string session_id = 1;
}

message CloseSessionRequest {
  string session_id = 1;
}

message CloseSessionResponse {
  bool success = 1;
}
